# Scuttle

./: .gitignore  Cargo.toml  README.md
docs/: PUSH_DESIGN.md
src/: google_drive_api_client.rs  lib.rs  main.rs  sqlite_db.rs  token_storage.rs
src/config/: service.rs
src/utils/: filesystem.rs  hashing.rs  mod.rs
