[package]
name = "scuttle"
version = "0.1.0"
edition = "2024"


[dependencies]
google-drive3 = "5.0.5"
yup-oauth2 = "9.0.0"
tokio = { version = "1", features = ["full"] }
hyper = "0.14"
hyper-rustls = "0.24"
anyhow = "1.0.99"
clap = { version = "4.5.47", features = ["derive"] }
serde = "1.0.219"
dirs = "4.0"
serde_json = "1.0.143"
mime = "0.3.17"
